fix dto and jwt filter

--- a/ang-jwt/Dockerfile
+++ b/ang-jwt/Dockerfile
@@ -1,5 +1,5 @@
+# Stage 1: Build Angular app
 FROM node:latest AS builder
-RUN mkdir -p /app
 
 WORKDIR /app
 
@@ -8,9 +8,13 @@ COPY . .
 RUN npm install --legacy-peer-deps
 RUN npm run build --prod
 
-#CMD ["npm","start"]
 
 FROM nginx:alpine
-COPY src/nginx/etc/conf.d/default.conf /etc/conf.d/default.conf
-COPY --from=builder app/dist/ang-jwt /usr/share/nginx/html
 
+COPY src/nginx/etc/conf.d/default.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/dist/ang-jwt/browser /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
