--- a/spring-api/src/main/resources/application.properties
+++ b/spring-api/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
 jwt.secret=X6z9F2pQ7rT4wH8bE3nM1vC5xL0jK7dS
-jwt.expiration=86400000
+jwt.expiration=60000
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
