--- a/spring-api/src/main/resources/application.properties
+++ b/spring-api/src/main/resources/application.properties
@@ -9,14 +9,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
 jwt.secret=X6z9F2pQ7rT4wH8bE3nM1vC5xL0jK7dS
-jwt.expiration=60000
+jwt.expiration=8640000
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+
